--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  
   "scripts": {
     "dev": "nodemon app"
   },
@@ -13,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cashfree-pg-sdk-nodejs": "^2.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1"
