--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "cashfree-pg-sdk-nodejs": "^2.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
